# blackjack-engine

./: .env  .env.model  .gitignore  .pylintrc  Dockerfile  README.md  Start.py  TODO  docker-compose.yml  install-deps.sh  install-python-dep.sh  main.py  new-python-dep.sh  pyproject.toml  requirements.txt  start-with-uvicorn.sh  start.ps1  start.sh
api/: Deal.py  ExistingDataRoutes.py  GameRoutes.py  GameStart.py  PlaceBet.py  PlayerDecisions.py  Session.py  SessionRoutes.py  SimulationRoutes.py
controllers/: DealController.py  ExistingDataController.py  GameController.py  PlaceBetController.py  PlayerDecisionController.py  SessionController.py  SimulationController.py  StartGameController.py
entities/: Card.py  Dealer.py  Game.py  Hand.py  Player.py  Shoe.py
services/: BasicStrategyEngine.py  BlackjackEngine.py  BlackjackLogger.py  CardCountingEngine.py  DatabaseHandler.py  MathHelper.py  MultiSimRunner.py  MultiSimulationRunner.py  RulesEngine.py  ServerLogger.py  SessionManagerSingleton.py  SimDataTransformer.py  SimulationDataTransformer.py  SimulationEngine.py  SingleSimRunner.py  SingleSimulationRunner.py
src/: main.py
zz-test-client/: .create_simulation.sh.swp  .play_full_game.sh.swp  00-get-game.sh  1-create-game.sh  1.json  10-split.sh  2-register-player.sh  2.json  3-start-game.sh  4-place-bet.sh  5-insurance.sh  6-surrender.sh  7-hit.sh  8-stand.sh  9-double.sh  benchmark.sh  continue_two_player_api_game.sh  create-multi-sim-runner.sh  create-single-sim-runner.sh  create_multi_sim_req.json  create_multi_sim_runner.sh  create_simulation.sh  deal.sh  (+19 more)
(+166 files in other folders)
