[project]
name = "blackjack-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "cryptography==3.4.8",
  "fastapi==0.115.13",
  "numba==0.61.2",
  "psycopg[binary]>=3.1",
  "pydantic==2.11.7",
  "PyMySQL==1.0.2",
  "pytest==8.4.0",
  "pytest_asyncio==1.0.0",
  "python-dotenv==1.1.1",
  "SQLAlchemy==2.0.41",
  "uvicorn==0.15.0"
]

[project.optional-dependencies]
dev = [
  # Linters/Tests
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
indent = "  "
line_length = 120

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"

